# respondami

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  website.yml
crates/ratatui-md/: Cargo.toml
crates/ratatui-md/src/: blockquote.rs  code.rs  heading.rs  height.rs  lib.rs  list.rs  paragraph.rs  parsing.rs  rule.rs  table.rs  task_list.rs  theme.rs  types.rs
crates/ratatui-widgets/: Cargo.toml
crates/ratatui-widgets/src/: autocomplete_popup.rs  command_palette_overlay.rs  filled_header_bar.rs  lib.rs  panel_overlay.rs  prompt_editor_overlay.rs
docs/: configuration.md  hooks.md  logging.md  quick-start.md  security.md  skills.md  troubleshooting.md
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: agent_events.rs  agent_events_tests.rs  agents_md.rs  agents_md_tests.rs  commands.rs  commands_tests.rs  config.rs  config_tests.rs  event_loop.rs  event_loop_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  mouse.rs  skills.rs  skills_tests.rs  sse_debug.rs  sse_debug_tests.rs  turn.rs
src/agent/: mod.rs  mod_tests.rs  prompts.rs  streaming.rs  token_estimation.rs  token_estimation_tests.rs
src/context/: mod.rs  token_tracker.rs  token_tracker_tests.rs
src/hooks/: executor.rs  executor_tests.rs  loader.rs  loader_tests.rs  mod.rs
src/key_handler/: command_palette.rs  global.rs  help_popup.rs  idle.rs  init_popup.rs  mod.rs  session_select.rs
src/key_handler/layers/: input.rs  input_tests.rs  mod.rs  modal.rs  modal_tests.rs  navigation.rs  navigation_tests.rs  transitions.rs  transitions_tests.rs
src/provider/: llamacpp.rs  llamacpp_tests.rs  mod.rs  mod_tests.rs  sse.rs  sse_tests.rs
src/session/: compaction.rs  compaction_tests.rs  display_adapter.rs  entry.rs  entry_tests.rs  manager.rs  manager_tests.rs  mod.rs
src/tools/: activate_skill.rs  activate_skill_tests.rs  bash.rs  bash_tests.rs  edit.rs  edit_diff.rs  edit_diff_tests.rs  file_queue.rs  file_queue_tests.rs  mod.rs  read.rs  read_tests.rs  rtk.rs  rtk_tests.rs  write.rs  write_tests.rs
src/tui/: activity_indicator.rs  activity_indicator_tests.rs  agent_event.rs  agent_state.rs  app.rs  app_tests.rs  autocomplete.rs  autocomplete_tests.rs  chat.rs  chat_state.rs  config_state.rs  editor_state.rs  hook_display.rs  hook_display_tests.rs  layout.rs  layout_tests.rs  mod.rs  modal_state.rs  mode.rs  session_state.rs  status_bar.rs  status_bar_tests.rs  theme.rs  thinking_display.rs  thinking_display_tests.rs  ui_state.rs
src/tui/editor/: commands.rs  commands_tests.rs  cursor.rs  cursor_tests.rs  discovery.rs  discovery_tests.rs  mod.rs  renderer.rs  wrap.rs  wrap_tests.rs
src/tui/messages/: assistant_message.rs  compaction_message.rs  hook_message.rs  hook_message_tests.rs  mod.rs  skill_activation_message.rs  system_message.rs  system_message_tests.rs  thinking_message.rs  thinking_message_tests.rs  user_message.rs  welcome_screen.rs  welcome_screen_tests.rs
src/tui/messages/tool_call/: bash.rs  edit.rs  mod.rs  mod_tests.rs  read.rs  unknown.rs  write.rs
web/: index.html  styles.css
