[workspace]
members = ["crates/*"]
default-members = [".", "crates/*"]

[package]
name = "respondami"
version = "0.1.0"
description = "A privacy-first coding agent. One binary, no telemetry, skills-driven."
edition = "2024"
license = "MIT"
repository = "https://github.com/respondami/respondami"
readme = "README.md"
keywords = ["cli", "ai", "agent", "terminal", "tdd"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-openai = { version = "0.41.0", features = ["chat-completion"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "5"
fuzzy-matcher = "0.3"
dashmap = "6"
fastrand = "2"
ignore = "0.4"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"], default-features = false }
once_cell = "1"
partial-json-fixer = "0.5"
pulldown-cmark = "0.13"
similar = "2.6"
unicode-normalization = "0.1"
unicode-width = "0.2"
ratatui = "0.30.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
syntect = { version = "5", features = ["default-onig"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

tachyonfx = "0.25.0"
mimalloc = "0.1"

ratatui-widgets = { path = "crates/ratatui-widgets" }
ratatui-md = { path = "crates/ratatui-md" }

[dev-dependencies]
serial_test = "3.5.0"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "allow"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "allow"
literal_string_with_formatting_args = "allow"
# Terminal dimensions (ratatui/crossterm use u16) — truncation impossible in practice.
cast_lossless = "allow"
# Color values (f64→u8 for 0-255 range) and token counts (f64→u64) are intentional.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# Terminal color gradient uses strict f64 equality for bucket boundaries.
float_cmp = "allow"
# Event loops and rendering functions are single coherent units.
too_many_lines = "allow"
# Pedantic style — intentional patterns in this codebase.
format_push_string = "allow"
unused_self = "allow"
similar_names = "allow"
used_underscore_binding = "allow"
assigning_clones = "allow"
redundant_else = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
unused_async = "allow"
unnecessary_wraps = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
map_unwrap_or = "allow"
result_large_err = "allow"
struct_field_names = "allow"
wildcard_in_or_patterns = "allow"
needless_continue = "allow"
unnecessary_debug_formatting = "allow"
ref_option = "allow"
no_effect_underscore_binding = "allow"
missing_fields_in_debug = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
