[project]
name = "respondami"
version = "0.1.0"
description = "Privacy first mcp server to enhance AI coding assistants with up to date library documentations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.21.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
]
