[package]
name = "ratatui-md"
version = "0.1.0"
description = "Markdown parsing and rendering for ratatui TUI applications"
edition = "2024"
license = "MIT"
repository = "https://github.com/sorcerersr/respondami"
readme = "README.md"
keywords = ["ratatui", "markdown", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
pulldown-cmark = "0.12"
