[package]
name = "ratatui-widgets"
version = "0.1.0"
description = "Reusable ratatui widgets extracted from the Respondami TUI"
edition = "2024"
license = "MIT"
repository = "https://github.com/sorcerersr/respondami"
readme = "README.md"
keywords = ["ratatui", "widgets", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
unicode-width = "0.2"
